<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/group_info"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:checked="true"
            android:icon="@drawable/ic_house"
            android:title="@string/item_home" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_users"
            android:title="@string/item_profile" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_information"
            android:title="@string/item_about_us" />
        <item
            android:id="@+id/nav_feed_back"
            android:icon="@drawable/ic_feedback"
            android:title="Feedback" />
    </group>
    <group
        android:id="@+id/group_action"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_logout"
            android:title="@string/item_logout" />
    </group>
</menu>
